# fool

./: .gitignore  LICENSE  pyproject.toml
src/fool/: __main__.py  card.py  deck.py  game.py  table.py
src/fool/players/: __init__.py  attacks.py  child.py  common.py  defenses.py  player.py  random.py
tests/: test_card.py  test_card_list.py
